package org.jantor.entities;

public class Dirt extends Block {
    public Dirt() {
        super("dirt");
    }
}
