package org.jantor.entities;

public class Grass extends Block {
    public Grass() {
        super("grass");
    }
}
