package org.jantor.entities;

public class Stone extends Block {
    public Stone() {
        super("stone");
    }
}
