package org.jantor.image;

public class BlockImage extends ElementImage {
    public BlockImage(String fileName ) {
        super("resources/image/block/", fileName);
    }
}
