package org.jantor.mixin;

public class PlayerImage extends GreenfootImage {

    public PlayerImage(String path ) {
        super("resources/image/player/" + path);
    }

}